# black-mesa-api

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml.example  openapi.yml
src/: auth.rs  discord.rs  endpoints.rs  errors.rs  main.rs  middleware.rs  mongo.rs  oauth.rs  permissions.rs
src/structs/: appeals.rs  config.rs  mod.rs
