[package]
name = "black-mesa-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9.1"
mongodb = "2.7"
bson = "2.7"
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_with = "3.4"
futures-util = "0.3"
chrono = "0.4"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"